--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vlad
 Type: Package
-Title: Variable life-adjusted display (VLAD) and other risk-adjusted control charts
+Title: Variable Life Adjusted Display
 Version: 0.0.1
 Authors@R: person("Philipp", "Wittenberg", email = "pwitten@hsu-hh.de",
                   role = c("aut", "cre"))
@@ -8,9 +8,7 @@ Depends: R (>= 2.10)
 Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
 URL: http://github.com/wittenberg/vlad
 BugReports: http://github.com/wittenberg/vlad/issues
-Description: More details about what the package does. See
-          <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file>
-          for details on how to write this part. Variable life-adjusted display (VLAD) and other risk-adjusted control charts.
+Description: Contains functions to set up risk-adjusted quality control charts in health care. For the variable life adjusted display (VLAD) and RA-CUSUM based on log-likelihood ratio statistic parameters such as the Average Run Length (ARL) or control limits can be computed.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
