--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12)
-Suggests: dplyr, ggplot2, parallel, spcadjust (>= 1.1), tidyr
+Suggests: dplyr, ggplot2, parallel, spcadjust (>= 1.1), tidyr,
+    testthat
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1
