--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,9 @@ Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
 URL: https://github.com/wittenberg/vlad
 BugReports: https://github.com/wittenberg/vlad/issues
 Description: Contains functions to set up risk-adjusted quality control charts
-    in health care. For the variable life adjusted display (VLAD) and RA-CUSUM
-    based on log-likelihood ratio statistic parameters such as the Average Run
-    Length (ARL) or control limits can be computed.
+    in health care. For the variable life adjusted display (VLAD) and 
+    risk-adjusted CUSUM chart based on log-likelihood ratio statistic the 
+    Average Run Length or control limits can be computed.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
