--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ BugReports: https://github.com/wittenberg/vlad/issues
 Description: Contains functions to set up risk-adjusted quality control charts
     in health care. For the variable life adjusted display (VLAD) and the
     risk-adjusted Cumulative Sum chart based on log-likelihood ratio statistic 
-    Average Run Lengths or control limits can be computed.
+    Average Run Lengths and control limits can be computed.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
