ORCID ID in description and more testing.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,13 @@ Type: Package
 Title: Variable Life Adjusted Display
 Version: 0.1.0
 Authors@R: c(
-      person("Philipp", "Wittenberg", email = "pwitten@hsu-hh.de", role = 
-      c("aut", "cre")),
-      person("Sven", "Knoth", email = "<Sven.Knoth@gmx.de>", role = "aut"))
+            person("Philipp", "Wittenberg", 
+            email = "pwitten@hsu-hh.de", 
+            role = c("aut", "cre"),
+            comment = c(ORCID = "0000-0001-7151-8243")),
+            person("Sven", "Knoth", 
+            email = "<Sven.Knoth@gmx.de>", 
+            role = "aut"))
 Depends: R (>= 2.10)
 Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
 URL: https://github.com/wittenberg/vlad
