Update News, Readme, src and R files.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,15 +16,17 @@ Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
 BugReports: https://github.com/wittenberg/vlad/issues
 Description: Contains functions to set up risk-adjusted quality control charts
     in health care. For the variable life adjusted display (VLAD) proposed by 
-    Lovegrove et al. (1997) <doi:10.1016/S0140-6736(97)06507-0> and the 
-    risk-adjusted cumulative sum chart based on log-likelihood ratio statistic
-    introduced by Steiner et al. (2000) <doi:10.1093/biostatistics/1.4.441> the
+    Lovegrove et al. (1997) <doi:10.1016/S0140-6736(97)06507-0> signaling rules
+    derived in Wittenberg et al. (2018) <doi: 10.1002/sim.7647> are implemented. 
+    Additionally, for the risk-adjusted cumulative sum chart based on log-likelihood
+    ratio statistic introduced by Steiner et al. (2000) <doi:10.1093/biostatistics/1.4.441>
     average run length and control limits can be computed.
 License: GPL (>= 2)
-NeedsCompilation:	yes
+NeedsCompilation: yes
+SystemRequirements: C++11
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12)
 Suggests: dplyr, ggplot2, parallel, rmarkdown, spcadjust (>= 1.1), tidyr, testthat
 LinkingTo: Rcpp, RcppArmadillo
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
