Include reset/no reset llr_scores function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(eocusum_arl_sim)
 export(eocusum_arloc_h_sim)
 export(eocusum_arloc_sim)
 export(gettherisk)
+export(llr_cusum_scores)
 export(llr_score)
 export(optimal_k)
 export(racusum_adoc_sim)
