--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
             comment = c(ORCID = "0000-0001-7151-8243")),
             person("Sven", "Knoth", 
             email = "<Sven.Knoth@gmx.de>", 
-            role = "aut",
+            role = c("aut", "ths"),
             comment = c(ORCID = "0000-0002-9666-5554")))
 Depends: R (>= 2.10)
 Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
