Start function renaming.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(racusum_arl_h_sim)
 export(racusum_arl_sim)
 export(racusum_arloc_h_sim)
 export(racusum_arloc_sim)
+export(racusum_crit_sim)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp,evalCpp)
 useDynLib(vlad, .registration = TRUE)
