--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(eocusum_arl_h_sim)
 export(eocusum_arl_sim)
 export(eocusum_arloc_h_sim)
 export(eocusum_arloc_sim)
+export(eocusum_crit_sim)
 export(gettherisk)
 export(llr_cusum_scores)
 export(llr_score)
