--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calceo)
 export(cusum_arl_h_sim)
 export(cusum_arl_sim)
 export(eo_cusum_scores)
+export(eocusum_ad_sim)
 export(eocusum_adoc_sim)
 export(eocusum_arl_h_sim)
 export(eocusum_arl_sim)
