Rename racusum and include rockettails.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(racusum_arloc_h_sim)
 export(racusum_arloc_sim)
 export(racusum_crit_sim)
 export(racusum_scores)
+export(rockettails)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp,evalCpp)
 useDynLib(vlad, .registration = TRUE)
