--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(eocusum_scores)
 export(gettherisk)
 export(llr_score)
 export(optimal_k)
+export(plot_racusum)
 export(racusum_adoc_sim)
 export(racusum_arl_h_sim)
 export(racusum_arl_sim)
@@ -25,5 +26,8 @@ export(racusum_crit_sim)
 export(racusum_scores)
 export(rockettails)
 exportPattern("^[[:alpha:]]+")
+import(dplyr)
+import(ggplot2)
 importFrom(Rcpp,evalCpp)
+importFrom(tidyr,gather)
 useDynLib(vlad, .registration = TRUE)
