Include Markov Chain for racusum.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,11 @@ export(optimal_k)
 export(plot_racusum)
 export(racusum_adoc_sim)
 export(racusum_arl_h_sim)
+export(racusum_arl_mc)
 export(racusum_arl_sim)
 export(racusum_arloc_h_sim)
 export(racusum_arloc_sim)
+export(racusum_crit_mc)
 export(racusum_crit_sim)
 export(racusum_scores)
 export(rockettails)
