--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(racusum_adoc_sim)
 export(racusum_arl_h_sim)
 export(racusum_arl_mc)
 export(racusum_arl_sim)
+export(racusum_arloc_d_sim)
 export(racusum_arloc_h_sim)
 export(racusum_arloc_sim)
 export(racusum_crit_mc)
