--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(racusum_crit_mc)
 export(racusum_crit_sim)
 export(racusum_scores)
 export(search_delta)
+export(trafo)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp,evalCpp)
 useDynLib(vlad, .registration = TRUE)
