--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,26 +4,17 @@ export(QQ)
 export(bcusum_arl_sim)
 export(bcusum_crit_sim)
 export(calceo)
-export(cusum_arl_h_sim)
-export(cusum_arl_sim)
 export(ell)
 export(eocusum_ad_sim)
-export(eocusum_adoc_sim)
-export(eocusum_arl_h_sim)
 export(eocusum_arl_sim)
-export(eocusum_arloc_h_sim)
-export(eocusum_arloc_sim)
 export(eocusum_crit_sim)
 export(eocusum_scores)
 export(gettherisk)
 export(llr_score)
 export(optimal_k)
-export(racusum_adoc_sim)
-export(racusum_arl_h_sim)
+export(racusum_ad_sim)
 export(racusum_arl_mc)
 export(racusum_arl_sim)
-export(racusum_arloc_h_sim)
-export(racusum_arloc_sim)
 export(racusum_crit_mc)
 export(racusum_crit_sim)
 export(racusum_scores)
