--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ NeedsCompilation: yes
 SystemRequirements: C++11
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12)
+Imports: Rcpp (>= 0.12.12), checkmate
 Suggests: dplyr, ggplot2, parallel, rmarkdown, spcadjust (>= 1.1), testthat, tidyr
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
