--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Authors@R: c(
             comment = c(ORCID = "0000-0002-9666-5554")))
 Depends: R (>= 2.10)
 Maintainer: Philipp Wittenberg <pwitten@hsu-hh.de>
+URL: https://github.com/wittenberg/vlad
 BugReports: https://github.com/wittenberg/vlad/issues
 Description: Contains functions to set up risk-adjusted quality control charts in health care. For the variable life adjusted display (VLAD) proposed by Lovegrove et al. (1997) <doi:10.1016/S0140-6736(97)06507-0> signaling rules derived in Wittenberg et al. (2018) <doi: 10.1002/sim.7647> are implemented. Additionally, for the risk-adjusted cumulative sum chart based on log-likelihood ratio statistic introduced by Steiner et al. (2000) <doi:10.1093/biostatistics/1.4.441> average run length and control limits can be computed with fast and accurate Markov chain approximations developed in Knoth et al. (2019) <doi:10.1002/sim.8104>.
 License: GPL (>= 2)
@@ -21,6 +22,14 @@ SystemRequirements: C++11
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12), checkmate
-Suggests: dplyr, ggplot2, rmarkdown, spcadjust (>= 1.1), testthat, tidyr
+Suggests: 
+    dplyr,
+    ggplot2,
+    rmarkdown,
+    spcadjust (>= 1.1),
+    testthat,
+    tidyr,
+    knitr
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
