Start a more detailed documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,14 +21,12 @@ NeedsCompilation: yes
 SystemRequirements: C++11
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12), checkmate
+Imports: Rcpp (>= 0.12.12), checkmate, magrittr, dplyr, tidyr
 Suggests: 
-    dplyr,
     ggplot2,
     rmarkdown,
     spcadjust (>= 1.1),
     testthat,
-    tidyr,
     knitr
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
