Some more code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,11 @@ export(racusum_ad_sim)
 export(racusum_arl_mc)
 export(racusum_arl_sim)
 export(racusum_beta_arl_mc)
+export(racusum_beta_arl_sim)
 export(racusum_beta_crit_mc)
+export(racusum_beta_crit_sim)
+export(racusum_betabinomial_arl_sim)
+export(racusum_betabinomial_crit_sim)
 export(racusum_crit_mc)
 export(racusum_crit_sim)
 export(racusum_scores)
