Tests and code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(optimal_k)
 export(racusum_ad_sim)
 export(racusum_arl_mc)
 export(racusum_arl_sim)
+export(racusum_beta_arl_int)
 export(racusum_beta_arl_mc)
 export(racusum_beta_arl_sim)
 export(racusum_beta_crit_mc)
