Include discrete Beta.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(racusum_betabinomial_arl_sim)
 export(racusum_betabinomial_crit_sim)
 export(racusum_crit_mc)
 export(racusum_crit_sim)
+export(racusum_discretebeta_arl_sim)
+export(racusum_discretebeta_crit_sim)
 export(racusum_scores)
 export(search_delta)
 export(trafo)
